Added: Fling tab proto with first rendered GFX.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 		android:theme="@style/Theme.IOSched"
         android:hardwareAccelerated="true">
         
-		<activity android:name=".HomeActivity" android:label="@string/app_name">
+		<activity android:name=".ui.MusicPagerFragment" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
