--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,4 +36,7 @@
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	
+	<uses-permission android:name="android.permission.READ_CONTACTS" />
+	
 </manifest>
