--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,13 +5,14 @@
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="11" />
 	<application 
 		android:icon="@drawable/icon" 
+		android:logo="@drawable/actionbar_compat_logo"
 		android:label="@string/app_name"
-		android:theme="@style/Theme.IOSched"
+		android:theme="@style/Theme.XBMCRemote"
         android:hardwareAccelerated="true">
         
 		<activity 
 			android:name=".HomeActivity"
-			android:theme="@style/Theme.IOSched.Home" 
+			android:theme="@style/Theme.XBMCRemote.Home"
 			android:label="@string/app_name">
 			<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
