--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:hardwareAccelerated="true">
         
 		<activity 
-			android:name=".HomeActivity"
+			android:name=".ui.HomeActivity"
 			android:theme="@style/Theme.XBMCRemote.Home"
 			android:label="@string/app_name">
 			<intent-filter>
