--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,13 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.xbmc.android.remotesandbox" android:versionCode="1"
 	android:versionName="1.0">
+	
+    <!-- Compatibility -->
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="11" />
+	
+	<!-- Permissions -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+	
 	<application 
 		android:icon="@drawable/icon" 
 		android:label="@string/app_name"
 		android:theme="@style/Theme.XBMCRemote"
         android:hardwareAccelerated="true">
         
+		<!-- Activities -->
 		<activity 
 			android:name=".ui.HomeActivity"
 			android:theme="@style/Theme.XBMCRemote.Home"
@@ -29,14 +39,23 @@
                 <data android:mimeType="vnd.android.cursor.dir/vnd.xbmc.album" />
             </intent-filter>
         </activity>
-                    
+        
+		<activity android:name="org.xbmc.android.account.authenticator.AuthenticatorActivity"
+            android:label="@string/authenticator_label"
+            android:theme="@android:style/Theme.Dialog"
+            android:excludeFromRecents="true" />
+        
+		<!-- Services -->
 		<service android:name="org.xbmc.android.jsonrpc.service.AudioSyncService" />
-		<provider android:name="org.xbmc.android.jsonrpc.provider.AudioProvider"
-			android:authorities="org.xbmc.android.jsonrpc" />
+		<service android:name="org.xbmc.android.account.authenticator.AuthenticationService" android:exported="true" >
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator" />
+        </service>
+        
+		<!-- Providers -->
+		<provider android:name="org.xbmc.android.jsonrpc.provider.AudioProvider" android:authorities="org.xbmc.android.jsonrpc" />
+		
 	</application>
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	
-	<uses-permission android:name="android.permission.READ_CONTACTS" />
-	
 </manifest>
