--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
 		
 		<!-- Activities -->
 		<activity 
-			android:name=".ui.HomeActivity"
+			android:name=".ui.common.HomeActivity"
 			android:theme="@style/Theme.XBMCRemote.Home"
 			android:label="@string/app_name">
 			<intent-filter>
@@ -32,7 +32,7 @@
 		</activity>
 		
 		<activity
-			android:name="org.xbmc.android.remotesandbox.ui.MusicPagerActivity"
+			android:name=".ui.common.MusicPagerActivityctivity"
 			android:label="@string/title_music">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
