--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	android:versionName="1.0">
 	
 	<!-- Compatibility -->
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="11" />
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
 	
 	<!-- Permissions -->
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -22,7 +22,7 @@
 		
 		<!-- Activities -->
 		<activity 
-			android:name=".ui.common.HomeActivity"
+			android:name="org.xbmc.android.remotesandbox.ui.common.HomeActivity"
 			android:theme="@style/Theme.XBMCRemote.Home"
 			android:label="@string/app_name">
 			<intent-filter>
@@ -32,7 +32,7 @@
 		</activity>
 		
 		<activity
-			android:name=".ui.common.MusicPagerActivityctivity"
+			android:name="org.xbmc.android.remotesandbox.ui.common.MusicPagerActivity"
 			android:label="@string/title_music">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
