--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,8 +23,8 @@
 		<!-- Activities -->
 		<activity 
 			android:name="org.xbmc.android.remotesandbox.ui.common.HomeActivity"
-			android:theme="@style/Theme.XBMCRemote.Home"
-			android:label="@string/app_name">
+			android:theme="@style/Theme.XBMCRemote.Home" 
+			android:label="@string/title_empty">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
