--- a/project.properties
+++ b/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=android-14
-android.library.reference.1=../xbmc-jsonrpclib-android
+android.library.reference.1=..\\xbmc-jsonrpclib-android
