--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.xbmc.android.remotesandbox" android:versionCode="1"
 	android:versionName="1.0">
-	
+
 	<!-- Compatibility -->
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
-	
+	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="17" />
+
 	<!-- Permissions -->
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,24 +13,24 @@
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-	
-	<application 
-		android:icon="@drawable/icon" 
+
+	<application
+		android:icon="@drawable/icon"
 		android:label="@string/app_name"
 		android:theme="@style/Theme.XBMCRemote"
 		android:hardwareAccelerated="true">
-		
+
 		<!-- Activities -->
-		<activity 
+		<activity
 			android:name="org.xbmc.android.remotesandbox.ui.common.HomeActivity"
-			android:theme="@style/Theme.XBMCRemote.Home" 
+			android:theme="@style/Theme.XBMCRemote.Home"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		
+
 		<activity
 			android:name="org.xbmc.android.remotesandbox.ui.common.MusicPagerActivity"
 			android:label="@string/title_music">
@@ -41,7 +41,11 @@
 				<data android:mimeType="vnd.android.cursor.dir/vnd.xbmc.album" />
 			</intent-filter>
 		</activity>
-		
+
+		<activity
+			android:name="org.xbmc.android.remotesandbox.ui.cards.MovieActivity"
+			android:label="@string/title_movies" />
+
 		<activity android:name="org.xbmc.android.account.authenticator.AuthenticatorActivity"
 			android:label="@string/addaccount_authenticator_label"
 			android:theme="@android:style/Theme.Dialog"
@@ -51,7 +55,7 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-		
+
 		<!-- Services -->
 		<service android:name="org.xbmc.android.jsonrpc.service.AudioSyncService" />
 		<service android:name="org.xbmc.android.jsonrpc.service.ConnectionService" />
@@ -62,7 +66,7 @@
 			</intent-filter>
 			<meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator" />
 		</service>
-		
+
 		<service android:name="org.xbmc.android.account.syncadapter.SyncService" android:exported="true" >
 			<intent-filter>
 				<action android:name="android.content.SyncAdapter" />
@@ -70,9 +74,9 @@
 			<meta-data android:name="android.content.SyncAdapter" android:resource="@xml/syncadapter" />
 			<meta-data android:name="android.provider.CONTACTS_STRUCTURE" android:resource="@xml/contacts" />
 		</service>
-		
+
 		<!-- Providers -->
 		<provider android:name="org.xbmc.android.jsonrpc.provider.AudioProvider" android:authorities="org.xbmc.android.jsonrpc" />
-		
+
 	</application>
 </manifest>
