--- a/project.properties
+++ b/project.properties
@@ -10,4 +10,5 @@
 # Project target.
 target=android-17
 android.library.reference.1=libs/xbmc-jsonrpclib
+android.library.reference.2=libs/slidingmenu/library
 
