--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,8 @@
 	<application
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
-		android:hardwareAccelerated="true">
+		android:hardwareAccelerated="true"
+		android:theme="@style/Theme.XBMCRemote">
 
 		<!-- Activities -->
 		<activity
