Added album listing to home page.

--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@ target=android-17
 android.library.reference.1=libs/xbmc-jsonrpclib
 android.library.reference.2=libs/actionbarsherlock/actionbarsherlock
 android.library.reference.3=libs/slidingmenu/library
-android.library.reference.4=libs
+android.library.reference.4=libs/pulltorefresh/library
 
