--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,5 @@ android.library.reference.1=libs/xbmc-jsonrpclib
 android.library.reference.2=libs/actionbarsherlock/actionbarsherlock
 android.library.reference.3=libs/slidingmenu/library
 android.library.reference.4=libs/pulltorefresh/library
+android.library.reference.5=libs/wizardpager/LibWizardPager
 
