--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,7 @@
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
 	<application
+		android:name="org.xbmc.android.sandbox.SandboxApplication"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
 		android:hardwareAccelerated="true"
