--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
 	<application
-		android:name="org.xbmc.android.sandbox.SandboxApplication"
+		android:name="org.xbmc.android.app.SandboxApplication"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
 		android:hardwareAccelerated="true"
@@ -23,7 +23,7 @@
 
 		<!-- Activities -->
 		<activity
-			android:name="org.xbmc.android.sandbox.ui.HomeActivity"
+			android:name="org.xbmc.android.app.ui.HomeActivity"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
