--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ":libs:slidingmenu:library", ":libs:xbmc-jsonrpclib", ':app'
+include ':libs:slidingmenu:library', ':libs:xbmc-jsonrpclib', ':app'
