Added wizardpager dependency.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/slidingmenu"]
 	path = libs/slidingmenu
 	url = git@github.com:freezy/SlidingMenu.git
+[submodule "libs/wizardpager"]
+	path = libs/wizardpager
+	url = https://github.com/freezy/WizardPager.git
