--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="org.xbmc.android.account.authenticator.WizardFiddleActivity" />
+		<activity android:name="org.xbmc.android.account.authenticator.ui.WizardActivity" />
 
 		<!-- Services -->
 		<service android:name="org.xbmc.android.jsonrpc.service.SyncService" />
