--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,12 @@ android {
 		versionCode 1
 		versionName '1.0'
 	}
+
+	buildTypes {
+		release {
+			runProguard true
+			proguardFile file('proguard.cfg')
+			proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
+		}
+	}
 }
