--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,8 @@
 		<activity android:name="org.xbmc.android.app.ui.HostChooseActivity" android:theme="@android:style/Theme.Holo.Light.Dialog" />
 
 		<!-- Services -->
-		<service android:name="org.xbmc.android.jsonrpc.service.SyncService" />
-		<service android:name="org.xbmc.android.jsonrpc.service.ConnectionService" />
+		<service android:name="org.xbmc.android.app.service.SyncService" />
+		<service android:name="org.xbmc.android.app.service.ConnectionService" />
 		<service android:name="org.xbmc.android.zeroconf.DiscoveryService" />
 		<service android:name="org.xbmc.android.account.authenticator.AuthenticationService" android:exported="true" >
 			<intent-filter>
@@ -53,8 +53,8 @@
 		</service>
 
 		<!-- Providers -->
-		<provider android:name="org.xbmc.android.jsonrpc.provider.AudioProvider" android:authorities="org.xbmc.android.jsonrpc.audio" />
-		<provider android:name="org.xbmc.android.jsonrpc.provider.VideoProvider" android:authorities="org.xbmc.android.jsonrpc.video" />
+		<provider android:name="org.xbmc.android.app.provider.AudioProvider" android:authorities="org.xbmc.android.jsonrpc.audio" />
+		<provider android:name="org.xbmc.android.app.provider.VideoProvider" android:authorities="org.xbmc.android.jsonrpc.video" />
 
 	</application>
 </manifest>
