--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
 		<!-- Services -->
 		<service android:name="org.xbmc.android.app.service.SyncService" />
-		<service android:name="org.xbmc.android.app.service.ConnectionService" />
+		<service android:name="org.xbmc.android.jsonrpc.service.ConnectionService" />
 		<service android:name="org.xbmc.android.zeroconf.DiscoveryService" />
 		<service android:name="org.xbmc.android.account.authenticator.AuthenticationService" android:exported="true" >
 			<intent-filter>
