Fixed layout problem with long list of hosts.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="org.xbmc.android.account.authenticator.ui.WizardActivity" />
-		<activity android:name="org.xbmc.android.app.ui.HostChooseActivity" android:theme="@android:style/Theme.Holo.Dialog" />
+		<activity android:name="org.xbmc.android.app.ui.HostChooseActivity" android:theme="@android:style/Theme.Holo.Light.Dialog" />
 
 		<!-- Services -->
 		<service android:name="org.xbmc.android.app.service.SyncService" />
