--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:0.6.+'
+		classpath 'com.android.tools.build:gradle:0.7.+'
 	}
 }
 apply plugin: 'android'
@@ -27,7 +27,7 @@ dependencies {
 	compile (project(":libs:wizardpager:LibWizardPager")) {
 		exclude module: 'support-v4'
 	}
-	compile project(":libs:xbmc-jsonrpclib")
+	compile project(":libs:xbmc-jsonrpclib:xbmc-jsonrpclib")
 	compile files('../libs/glide-2.0.1.jar')
 }
 
