--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.xbmc.android.remotesandbox" android:versionCode="1"
-	android:versionName="1.0">
-
-	<!-- Compatibility -->
-	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="17" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.xbmc.android.remotesandbox" >
 
 	<!-- Permissions -->
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -19,7 +14,8 @@
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
 		android:hardwareAccelerated="true"
-		android:theme="@style/Theme.XBMCRemote">
+		android:theme="@style/Theme.XBMCRemote"
+		android:allowBackup="false">
 
 		<!-- Activities -->
 		<activity
