--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,17 +9,15 @@ buildscript {
 apply plugin: 'android'
 
 dependencies {
-	compile 'com.android.support:support-v4:18.0.+'
+	compile 'com.android.support:gridlayout-v7:19.0.1'
+	compile 'com.android.support:support-v4:19.0.1'
+	compile 'com.android.support:appcompat-v7:19.0.1'
 	compile 'com.squareup.dagger:dagger:1.0.1'
 	compile 'com.squareup.dagger:dagger-compiler:1.0.1'
 	compile 'com.jakewharton:butterknife:4.0.1'
 	compile 'de.greenrobot:eventbus:2.2.0'
-	compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
 	compile 'com.github.chrisbanes.actionbarpulltorefresh:library:0.9.2'
 	compile 'com.github.rickyclarkson:jmdns:3.4.2-r353-1'
-	compile (project(":libs:slidingmenu:library")) {
-		exclude module: 'support-v4'
-	}
 	compile (project(":libs:wizardpager:LibWizardPager")) {
 		exclude module: 'support-v4'
 	}
@@ -29,7 +27,7 @@ dependencies {
 
 android {
 	compileSdkVersion 19
-	buildToolsVersion "18.0.1"
+	buildToolsVersion "19.0.1"
 
 	defaultConfig {
 		minSdkVersion 10
@@ -40,7 +38,7 @@ android {
 
 	buildTypes {
 		release {
-			runProguard true
+			runProguard false
 			proguardFile file('proguard.cfg')
 			proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
 		}
