--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 	compile 'com.squareup.dagger:dagger-compiler:1.0.1'
 	compile 'com.jakewharton:butterknife:4.0.1'
 	compile 'de.greenrobot:eventbus:2.2.0'
-	compile 'com.github.chrisbanes.actionbarpulltorefresh:library:0.9.2'
+	compile 'com.github.chrisbanes.actionbarpulltorefresh:extra-abc:+'
 	compile 'com.github.rickyclarkson:jmdns:3.4.2-r353-1'
 	compile (project(":libs:wizardpager:LibWizardPager")) {
 		exclude module: 'support-v4'
