Fixed page flow for first usage.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="org.xbmc.android.app.ui.WelcomeActivity" />
+		<activity android:name="org.xbmc.android.app.ui.WelcomeActivity" android:launchMode="singleTop"/>
 		<activity android:name="org.xbmc.android.account.authenticator.ui.WizardActivity" />
 		<activity android:name="org.xbmc.android.app.ui.HostChooseActivity" android:theme="@android:style/Theme.Holo.Light.Dialog" />
 
