--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,3 +52,8 @@ android {
 		abortOnError false
 	}
 }
+
+// disable lint for faster builds - enable and fix before releasing!
+project.afterEvaluate {
+	project.tasks.lint.enabled = false
+}
