--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	compile 'com.github.rickyclarkson:jmdns:3.4.2-r353-1'
 	compile project(":libs:xbmc-jsonrpclib:xbmc-jsonrpclib")
 	compile files('../libs/glide-2.0.1.jar')
+	compile files('../libs/YouTubeAndroidPlayerApi.jar')
 }
 
 android {
