Added poster zoom view and bumped Glide.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,11 @@ dependencies {
 	compile 'de.greenrobot:eventbus:2.2.0'
 	compile 'com.github.chrisbanes.actionbarpulltorefresh:extra-abc:+'
 	compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
-	compile 'com.github.manuelpeinado.fadingactionbar:fadingactionbar-abc:3.1.0'
 	compile 'com.github.johnkil.android-robototextview:robototextview:2.0.0'
 	compile 'com.github.rickyclarkson:jmdns:3.4.2-r353-1'
+	compile 'it.sephiroth.android.library.imagezoom:library:+'
 	compile project(":libs:xbmc-jsonrpclib:xbmc-jsonrpclib")
-	compile files('../libs/glide-2.0.1.jar')
+	compile files('../libs/glide-2.0.2.jar')
 	compile files('../libs/YouTubeAndroidPlayerApi.jar')
 }
 
