Updated build files to latest tools and SDK.

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+	repositories {
+		jcenter()
+	}
+
+	dependencies {
+		classpath 'com.android.tools.build:gradle:1.0.0'
+		classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.2'
+	}
+}
+
 allprojects {
 	repositories {
-		mavenCentral()
+		jcenter()
 	}
 }
