--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,59 @@
-buildscript {
-	repositories {
-		mavenCentral()
+apply plugin: 'com.android.application'
+
+android {
+
+	compileSdkVersion 21
+	buildToolsVersion "21.1.2"
+
+	defaultConfig {
+		applicationId "tv.kodi.android.app"
+
+		minSdkVersion 15
+		targetSdkVersion 21
+
+		versionCode 1
+		versionName "0.0.1-SNAPSHOT"
+
+		// that's for espresso.
+		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+		multiDexEnabled true
 	}
-	dependencies {
-		classpath 'com.android.tools.build:gradle:0.9.+'
+
+	buildTypes {
+		debug {
+			debuggable true
+			testCoverageEnabled = true
+		}
+	}
+
+	packagingOptions {
+		exclude 'LICENSE.txt'
+		exclude 'META-INF/LICENSE'
+		exclude 'META-INF/LICENSE.txt'
+		exclude 'META-INF/NOTICE'
 	}
 }
-apply plugin: 'android'
+
+
+
+apply plugin: 'android-unit-test'
+
+androidUnitTest {
+	downloadDependenciesSources true
+	downloadDependenciesJavadoc true
+	downloadTestDependenciesSources true
+	downloadTestDependenciesJavadoc true
+}
 
 dependencies {
-	compile 'com.android.support:gridlayout-v7:19.0.1'
-	compile 'com.android.support:support-v4:19.0.1'
-	compile 'com.android.support:appcompat-v7:19.0.1'
+
+	// app
+	compile 'com.android.support:support-annotations:21.0.3'
+	compile 'com.android.support:support-v4:21.0.3'
+	compile 'com.android.support:appcompat-v7:21.0.3'
+	compile('com.google.android.gms:play-services:6.1.+') {
+		exclude module: 'support-v4'
+	}
 	compile 'com.squareup.dagger:dagger:1.0.1'
 	compile 'com.squareup.dagger:dagger-compiler:1.0.1'
 	compile 'com.jakewharton:butterknife:4.0.1'
@@ -24,40 +66,20 @@ dependencies {
 	compile project(":libs:xbmc-jsonrpclib:xbmc-jsonrpclib")
 	compile files('../libs/glide-2.0.2.jar')
 	compile files('../libs/YouTubeAndroidPlayerApi.jar')
+
+	// robolectric
+	testCompile 'junit:junit:4.11'
+	testCompile 'org.mockito:mockito-core:1.9.5'
+	testCompile 'com.squareup:fest-android:1.0.8'
+	testCompile 'org.robolectric:robolectric:2.4'
+
+	// espresso
+	androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
+	androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
+	androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
+	androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
+	androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
 }
 
-android {
-	compileSdkVersion 19
-	buildToolsVersion "19.0.3"
 
-	defaultConfig {
-		minSdkVersion 10
-		targetSdkVersion 19
-		versionCode 1
-		versionName '1.0'
-	}
 
-	buildTypes {
-		release {
-			runProguard false
-			proguardFile file('proguard.cfg')
-			proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
-		}
-	}
-
-	packagingOptions {
-		exclude 'META-INF/services/javax.annotation.processing.Processor'
-		exclude 'META-INF/ASL2.0'
-		exclude 'META-INF/LICENSE'
-		exclude 'META-INF/NOTICE'
-	}
-
-	lintOptions {
-		abortOnError false
-	}
-}
-
-// disable lint for faster builds - enable and fix before releasing!
-project.afterEvaluate {
-	project.tasks.lint.enabled = false
-}
