--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.xbmc.android.remotesandbox" >
+<manifest
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	package="org.xbmc.android.remotesandbox">
 
 	<!-- Permissions -->
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +18,8 @@
 		android:label="@string/app_name"
 		android:hardwareAccelerated="true"
 		android:theme="@style/Theme.XBMCRemote"
-		android:allowBackup="false">
+		android:allowBackup="false"
+		tools:replace="android:allowBackup">
 
 		<!-- Activities -->
 		<activity
