--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ android {
 		exclude 'META-INF/LICENSE'
 		exclude 'META-INF/LICENSE.txt'
 		exclude 'META-INF/NOTICE'
+		exclude 'META-INF/ASL2.0'
+		exclude 'META-INF/services/javax.annotation.processing.Processor'
 	}
 }
 
